Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15071

conf-sanity test_89: Segmentation fault tunefs.lustre --erase-params lustre-mdt (zfs)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Lustre 2.15.0
    • zfs/4.18.0-193
    • 9223372036854775807

      == conf-sanity test 89: check tunefs --param and --erase-param{s} options ============================ 05:10:38 (1628053838)
      Stopping clients: fre1135,fre1136 /mnt/lustre (opts:)
      Stopping clients: fre1135,fre1136 /mnt/lustre2 (opts:)
      Stopping /mnt/lustre-mgs (opts:) on fre1133
      fre1133: e2label: No such file or directory while trying to open lustre-mdt1/mdt1
      fre1133: Couldn't find valid filesystem superblock.
      pdsh@fre1135: fre1133: ssh exited with exit code 1
      tunefs --param failover.node=192.0.2.254@tcp0
      fre1133: e2label: No such file or directory while trying to open lustre-mdt/mdt
      fre1133: Couldn't find valid filesystem superblock.
      pdsh@fre1135: fre1133: ssh exited with exit code 1
      tunefs --param failover.node=192.0.2.255@tcp0
      tunefs --erase-param failover.node
      tunefs --erase-params
      fre1133: sh: line 1: 784941 Segmentation fault      (core dumped) tunefs.lustre --erase-params lustre-mdt1/mdt1 > /dev/null
      pdsh@fre1135: fre1133: ssh exited with exit code 139
       conf-sanity test_89: @@@@@@ FAIL: tunefs --erase-params failed 
       

            wc-triage WC Triage
            aboyko Alexander Boyko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: